--- a/code/dataset2.ipynb
+++ b/code/dataset2.ipynb
@@ -5,26 +5,24 @@
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import csv\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy.stats import entropy\n",
-    "from math import log, e\n",
-    "import itertools\n",
-    "from PyQt5.QtCore import pyqtSignal, QObject\n",
-    "from PyQt5 import QtCore, QtGui, QtWidgets, uic\n",
-    "from PyQt5.QtCore import *\n",
-    "from PyQt5.QtGui import *\n",
-    "from PyQt5.QtWidgets import *\n",
-    "import sys\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path"
+    "data = pd.read_csv('../csv/dataset3.csv', sep='|')\n",
+    "data = data.rename(columns={'paciente': 'id', 'utm30x_coord': 'x', 'utm30y_coord' : 'y'})\n",
+    "data.to_csv ('../csv/modify.csv', index = False, header=True)\n",
+    "data = pd.read_csv('../csv/modify.csv', sep=',')\n",
+    "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -613,14 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17.051519495178056, 8.08235539209618, 7.68821036341725, 0.8120550013026978, 2.529078225607805, 0.7620912039243725, 7.439903547246579, 1.1845409592151321, 1.4835292016492743, 0.13321766385857825, 0.9916016150303053, 14.814396652706561, 6.530185468848979, 4.223296125260199, 1.7803532074701724, 6.357157255700198, 0.9913116117169524, -0.0, 9.866728725348622, 6.251315677601265, 2.5077765020932095, 2.1739686149733664, 3.915614970106696, 5.79486609680338, 14.526686628969319, 14.526686628969317, 6.371069808408755, 5.508890800366896, 4.5786924608854065]\n"
+      "[17.051519495178056, 8.082355392096181, 7.688210363417252, 0.8120550013026978, 2.529078225607805, 0.7620912039243725, 7.439903547246578, 1.1845409592151321, 1.4835292016492743, 0.13321766385857825, 0.9916016150303053, 14.814396652706563, 6.530185468848979, 4.223296125260199, 1.7803532074701724, 6.357157255700198, 0.9913116117169525, -0.0, 9.866728725348622, 6.251315677601265, 2.5077765020932095, 2.1739686149733664, 3.915614970106696, 5.79486609680338, 14.526686628969319, 14.52668662896932, 6.371069808408755, 5.508890800366896, 4.5786924608854065]\n"
      ]
     },
     {
@@ -647,12 +647,12 @@
     "plt.xticks(fontsize=13, rotation=70)\n",
     "plt.bar(data.columns,totEnt)\n",
     "fig = plt.gcf()\n",
-    "fig.savefig('../gImg/all_ent.png', bbox_inches = \"tight\")"
+    "fig.savefig('all_ent.png', bbox_inches = \"tight\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
