Update con csv OK

--- a/code/dataset2.ipynb
+++ b/code/dataset2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +356,7 @@
     }
    ],
    "source": [
+    "#Path del csv\n",
     "pathE = \"csv/definitivo.csv\"\n",
     "l1,l2,l3 = main()\n",
     "if l1 == False:\n",
@@ -370,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,13 +411,12 @@
     "def pandas_entropy(column):\n",
     "    #values distintos\n",
     "    vc = pd.Series(column).value_counts(normalize=True, sort=False)\n",
-    "\n",
     "    return -(vc * np.log2(vc)).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,14 +425,15 @@
     "    tot = 0\n",
     "    for a in data3.columns:\n",
     "        if (a in datal) or (a in noJ):\n",
-    "            tot = tot + pandas_entropy(data3[a])\n",
+    "            value = pandas_entropy(data3[a])\n",
+    "            tot = tot + value\n",
     "    print(\"Entropy \"+\"{:.2f}\".format(tot))\n",
     "    return tot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -615,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17.107870914279616, 8.091618723689557, 7.695467060280009, 0.7944722350406354, 2.62473294238107, 0.7489634603502197, 7.4378089166726635, 1.048182829973604, 1.3249535571890356, 0.18664334052596482, 0.9931182738806112, 14.847445585819974, 6.5417516897299555, 4.235272420832459, 1.7827802416912557, 6.634174653816852, 1.1204378770925176, -0.0, 9.947240892841858, 6.356765478084259, 2.573775732019431, 2.3174821730139588, 4.278444489879128, 5.9561770191928884, 6.364856969689209, 5.523517957506619, 4.594859497396423]\n"
+      "[17.107870914279616, 8.091618723689557, 7.695467060280009, 0.7944722350406354, 2.62473294238107, 0.7489634603502197, 7.4378089166726635, 1.048182829973604, 1.3249535571890356, 0.18664334052596482, 0.9931182738806112, 14.855887953745345, 6.549538839261915, 4.242898870891311, 1.7812683486436574, 6.634174653816852, 1.1204378770925176, -0.0, 9.947240892841858, 6.356765478084259, 2.573775732019431, 2.3174821730139588, 4.278444489879128, 5.9561770191928884, 6.369257843613401, 5.49241457782266, 4.573324363927123]\n"
      ]
     },
     {
@@ -647,22 +648,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Realiza la query correspondiente a lista\n",
     "def query(datal,lista):\n",
-    "    data2 = data[datal].groupby(lista,dropna=True).agg('count')\n",
+    "    data2 = data[datal].groupby(lista,dropna=False).agg('count')\n",
     "    keep = data.groupby(lista).filter(lambda x: len(x) > 4)[lista]\n",
     "    selection = data.join(keep,how='inner',rsuffix='_kp')\n",
     "    entr = all_entropy(lista,selection)\n",
-    "    return data2[data2>4].sum(),entr"
+    "    return data2[data2<=4].sum(),entr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -742,198 +743,198 @@
      "text": [
       "['sexo', 'fecha_nac', 'codpos']\n",
       "Entropy 0.72\n",
-      "registros válidos: 5.0\n",
       "registros descartados: 141243.0\n",
+      "registros válidos: 5.0\n",
       "['sexo', 'fecha_nac', 'prov']\n",
-      "Entropy 40.51\n",
-      "registros válidos: 10662.0\n",
-      "registros descartados: 130586.0\n",
+      "Entropy 40.68\n",
+      "registros descartados: 130208.0\n",
+      "registros válidos: 11040.0\n",
       "['sexo', 'fecha_nac', 'Aragon']\n",
-      "Entropy 42.66\n",
-      "registros válidos: 27717.0\n",
-      "registros descartados: 113531.0\n",
+      "Entropy 42.70\n",
+      "registros descartados: 112657.0\n",
+      "registros válidos: 28591.0\n",
       "['sexo', 'fecha_nac', 'cias_cd']\n",
       "Entropy 0.00\n",
-      "registros válidos: 0.0\n",
-      "registros descartados: 141248.0\n",
+      "registros descartados: 141248\n",
+      "registros válidos: 0\n",
       "['sexo', 'fecha_nac', 'zona_cd']\n",
       "Entropy 0.00\n",
-      "registros válidos: 0.0\n",
-      "registros descartados: 141248.0\n",
+      "registros descartados: 141248\n",
+      "registros válidos: 0\n",
       "['sexo', 'fecha_nac', 'sector_cd']\n",
-      "Entropy 28.06\n",
-      "registros válidos: 442.0\n",
-      "registros descartados: 140806.0\n",
+      "Entropy 28.53\n",
+      "registros descartados: 140776.0\n",
+      "registros válidos: 472.0\n",
       "['sexo', 'fecha_nac', 'area_cd']\n",
-      "Entropy 28.84\n",
-      "registros válidos: 504.0\n",
-      "registros descartados: 140744.0\n",
+      "Entropy 29.25\n",
+      "registros descartados: 140714.0\n",
+      "registros válidos: 534.0\n",
       "['sexo', 'fecha_nac', 'ine11_cd']\n",
-      "Entropy 36.83\n",
-      "registros válidos: 3198.0\n",
-      "registros descartados: 138050.0\n",
+      "Entropy 36.95\n",
+      "registros descartados: 137934.0\n",
+      "registros válidos: 3314.0\n",
       "['sexo', 'fecha_nac', 'neighbour_cd']\n",
       "Entropy 0.72\n",
-      "registros válidos: 5.0\n",
       "registros descartados: 141243.0\n",
+      "registros válidos: 5.0\n",
       "['sexo', 'agno', 'codpos']\n",
       "Entropy 42.66\n",
-      "registros válidos: 100547.0\n",
-      "registros descartados: 40701.0\n",
+      "registros descartados: 37222.0\n",
+      "registros válidos: 104026.0\n",
       "['sexo', 'agno', 'prov']\n",
       "Entropy 38.61\n",
-      "registros válidos: 139208.0\n",
-      "registros descartados: 2040.0\n",
+      "registros descartados: 185.0\n",
+      "registros válidos: 141063.0\n",
       "['sexo', 'agno', 'Aragon']\n",
-      "Entropy 37.50\n",
-      "registros válidos: 139324.0\n",
-      "registros descartados: 1924.0\n",
+      "Entropy 37.49\n",
+      "registros descartados: 49.0\n",
+      "registros válidos: 141199.0\n",
       "['sexo', 'agno', 'cias_cd']\n",
-      "Entropy 40.34\n",
-      "registros válidos: 2901.0\n",
-      "registros descartados: 138347.0\n",
+      "Entropy 40.35\n",
+      "registros descartados: 134500.0\n",
+      "registros válidos: 6748.0\n",
       "['sexo', 'agno', 'zona_cd']\n",
       "Entropy 43.41\n",
-      "registros válidos: 116353.0\n",
-      "registros descartados: 24895.0\n",
+      "registros descartados: 19369.0\n",
+      "registros válidos: 121879.0\n",
       "['sexo', 'agno', 'sector_cd']\n",
       "Entropy 40.06\n",
-      "registros válidos: 135461.0\n",
-      "registros descartados: 5787.0\n",
+      "registros descartados: 264.0\n",
+      "registros válidos: 140984.0\n",
       "['sexo', 'agno', 'area_cd']\n",
       "Entropy 39.81\n",
-      "registros válidos: 139241.0\n",
-      "registros descartados: 2007.0\n",
+      "registros descartados: 173.0\n",
+      "registros válidos: 141075.0\n",
       "['sexo', 'agno', 'ine11_cd']\n",
-      "Entropy 39.59\n",
-      "registros válidos: 104244.0\n",
-      "registros descartados: 37004.0\n",
+      "Entropy 39.60\n",
+      "registros descartados: 33529.0\n",
+      "registros válidos: 107719.0\n",
       "['sexo', 'agno', 'neighbour_cd']\n",
       "Entropy 43.03\n",
-      "registros válidos: 116476.0\n",
-      "registros descartados: 24772.0\n",
+      "registros descartados: 20325.0\n",
+      "registros válidos: 120923.0\n",
       "['sexo', 'quinquenio', 'codpos']\n",
       "Entropy 41.07\n",
-      "registros válidos: 121591.0\n",
-      "registros descartados: 19657.0\n",
+      "registros descartados: 15923.0\n",
+      "registros válidos: 125325.0\n",
       "['sexo', 'quinquenio', 'prov']\n",
       "Entropy 36.31\n",
-      "registros válidos: 139321.0\n",
-      "registros descartados: 1927.0\n",
+      "registros descartados: 62.0\n",
+      "registros válidos: 141186.0\n",
       "['sexo', 'quinquenio', 'Aragon']\n",
       "Entropy 35.19\n",
-      "registros válidos: 139334.0\n",
-      "registros descartados: 1914.0\n",
+      "registros descartados: 40.0\n",
+      "registros válidos: 141208.0\n",
       "['sexo', 'quinquenio', 'cias_cd']\n",
-      "Entropy 44.45\n",
-      "registros válidos: 73837.0\n",
-      "registros descartados: 67411.0\n",
+      "Entropy 44.46\n",
+      "registros descartados: 61903.0\n",
+      "registros válidos: 79345.0\n",
       "['sexo', 'quinquenio', 'zona_cd']\n",
-      "Entropy 41.46\n",
-      "registros válidos: 132899.0\n",
-      "registros descartados: 8349.0\n",
+      "Entropy 41.45\n",
+      "registros descartados: 2858.0\n",
+      "registros válidos: 138390.0\n",
       "['sexo', 'quinquenio', 'sector_cd']\n",
       "Entropy 37.76\n",
-      "registros válidos: 135576.0\n",
-      "registros descartados: 5672.0\n",
+      "registros descartados: 84.0\n",
+      "registros válidos: 141164.0\n",
       "['sexo', 'quinquenio', 'area_cd']\n",
-      "Entropy 37.51\n",
-      "registros válidos: 139324.0\n",
-      "registros descartados: 1924.0\n",
+      "Entropy 37.50\n",
+      "registros descartados: 68.0\n",
+      "registros válidos: 141180.0\n",
       "['sexo', 'quinquenio', 'ine11_cd']\n",
-      "Entropy 38.32\n",
-      "registros válidos: 121007.0\n",
-      "registros descartados: 20241.0\n",
+      "Entropy 38.33\n",
+      "registros descartados: 16471.0\n",
+      "registros válidos: 124777.0\n",
       "['sexo', 'quinquenio', 'neighbour_cd']\n",
       "Entropy 41.11\n",
-      "registros válidos: 135584.0\n",
-      "registros descartados: 5664.0\n",
+      "registros descartados: 1240.0\n",
+      "registros válidos: 140008.0\n",
       "['sexo', 'rango', 'codpos']\n",
       "Entropy 39.09\n",
-      "registros válidos: 134294.0\n",
-      "registros descartados: 6954.0\n",
+      "registros descartados: 4875.0\n",
+      "registros válidos: 136373.0\n",
       "['sexo', 'rango', 'prov']\n",
       "Entropy 33.85\n",
-      "registros válidos: 141201.0\n",
-      "registros descartados: 47.0\n",
+      "registros descartados: 18.0\n",
+      "registros válidos: 141230.0\n",
       "['sexo', 'rango', 'Aragon']\n",
       "Entropy 32.73\n",
-      "registros válidos: 141205\n",
-      "registros descartados: 43\n",
+      "registros descartados: 3.0\n",
+      "registros válidos: 141245.0\n",
       "['sexo', 'rango', 'cias_cd']\n",
       "Entropy 42.57\n",
-      "registros válidos: 133255.0\n",
-      "registros descartados: 7993.0\n",
+      "registros descartados: 4172.0\n",
+      "registros válidos: 137076.0\n",
       "['sexo', 'rango', 'zona_cd']\n",
       "Entropy 39.08\n",
-      "registros válidos: 137327.0\n",
-      "registros descartados: 3921.0\n",
+      "registros descartados: 133.0\n",
+      "registros válidos: 141115.0\n",
       "['sexo', 'rango', 'sector_cd']\n",
       "Entropy 35.30\n",
-      "registros válidos: 137421\n",
-      "registros descartados: 3827\n",
+      "registros descartados: 38.0\n",
+      "registros válidos: 141210.0\n",
       "['sexo', 'rango', 'area_cd']\n",
-      "Entropy 35.05\n",
-      "registros válidos: 141205\n",
-      "registros descartados: 43\n",
+      "Entropy 35.04\n",
+      "registros descartados: 38.0\n",
+      "registros válidos: 141210.0\n",
       "['sexo', 'rango', 'ine11_cd']\n",
       "Entropy 36.54\n",
-      "registros válidos: 133085.0\n",
-      "registros descartados: 8163.0\n",
+      "registros descartados: 6040.0\n",
+      "registros válidos: 135208.0\n",
       "['sexo', 'rango', 'neighbour_cd']\n",
       "Entropy 38.69\n",
-      "registros válidos: 138503.0\n",
-      "registros descartados: 2745.0\n",
+      "registros descartados: 48.0\n",
+      "registros válidos: 141200.0\n",
       "['sexo', 'fecha_nac', 'cluster']\n",
       "Entropy 0.00\n",
-      "registros válidos: 0.0\n",
-      "registros descartados: 141248.0\n",
+      "registros descartados: 141248\n",
+      "registros válidos: 0\n",
       "['sexo', 'fecha_nac', 'cluster2']\n",
       "Entropy 0.00\n",
-      "registros válidos: 0.0\n",
-      "registros descartados: 141248.0\n",
+      "registros descartados: 141248\n",
+      "registros válidos: 0\n",
       "['sexo', 'fecha_nac', 'cluster3']\n",
       "Entropy 0.00\n",
-      "registros válidos: 0.0\n",
-      "registros descartados: 141248.0\n",
+      "registros descartados: 141248\n",
+      "registros válidos: 0\n",
       "['sexo', 'agno', 'cluster']\n",
       "Entropy 43.61\n",
-      "registros válidos: 120896.0\n",
-      "registros descartados: 20352.0\n",
+      "registros descartados: 18297.0\n",
+      "registros válidos: 122951.0\n",
       "['sexo', 'agno', 'cluster2']\n",
-      "Entropy 42.96\n",
-      "registros válidos: 136147.0\n",
-      "registros descartados: 5101.0\n",
+      "Entropy 42.92\n",
+      "registros descartados: 3364.0\n",
+      "registros válidos: 137884.0\n",
       "['sexo', 'agno', 'cluster3']\n",
-      "Entropy 42.07\n",
-      "registros válidos: 138869.0\n",
-      "registros descartados: 2379.0\n",
+      "Entropy 42.04\n",
+      "registros descartados: 658.0\n",
+      "registros válidos: 140590.0\n",
       "['sexo', 'quinquenio', 'cluster']\n",
       "Entropy 41.52\n",
-      "registros válidos: 138445.0\n",
-      "registros descartados: 2803.0\n",
+      "registros descartados: 1078.0\n",
+      "registros válidos: 140170.0\n",
       "['sexo', 'quinquenio', 'cluster2']\n",
-      "Entropy 40.70\n",
-      "registros válidos: 139028.0\n",
-      "registros descartados: 2220.0\n",
+      "Entropy 40.66\n",
+      "registros descartados: 430.0\n",
+      "registros válidos: 140818.0\n",
       "['sexo', 'quinquenio', 'cluster3']\n",
-      "Entropy 39.78\n",
-      "registros válidos: 139279.0\n",
-      "registros descartados: 1969.0\n",
+      "Entropy 39.75\n",
+      "registros descartados: 186.0\n",
+      "registros válidos: 141062.0\n",
       "['sexo', 'rango', 'cluster']\n",
-      "Entropy 39.09\n",
-      "registros válidos: 141201.0\n",
-      "registros descartados: 47.0\n",
+      "Entropy 39.10\n",
+      "registros descartados: 55.0\n",
+      "registros válidos: 141193.0\n",
       "['sexo', 'rango', 'cluster2']\n",
-      "Entropy 38.25\n",
-      "registros válidos: 141205\n",
-      "registros descartados: 43\n",
+      "Entropy 38.22\n",
+      "registros descartados: 43.0\n",
+      "registros válidos: 141205.0\n",
       "['sexo', 'rango', 'cluster3']\n",
-      "Entropy 37.32\n",
-      "registros válidos: 141205\n",
-      "registros descartados: 43\n",
-      "Mayor entropía:  44.44894688089321, combinación:  [['sexo', 'quinquenio', 'cias_cd']]\n",
-      "Menor número de registros inválidos:  43, combinación:  [['sexo', 'rango', 'Aragon'], ['sexo', 'rango', 'area_cd'], ['sexo', 'rango', 'cluster2'], ['sexo', 'rango', 'cluster3']]\n"
+      "Entropy 37.30\n",
+      "registros descartados: 43.0\n",
+      "registros válidos: 141205.0\n",
+      "Mayor entropía:  44.46143573234613, combinación:  [['sexo', 'quinquenio', 'cias_cd']]\n",
+      "Menor número de registros inválidos:  3.0, combinación:  [['sexo', 'rango', 'Aragon']]\n"
      ]
     }
    ],
@@ -958,13 +959,13 @@
     "    if(magic == True): print(newEnt, end =\"\")\n",
     "    if(magic == True): print(\"}\", end =\" \")\n",
     "    if(magic == True): print(\"&\", end =\" \")\n",
-    "    if(magic == False): print('registros válidos:', value[0])\n",
+    "    if(magic == False): print('registros descartados:', value[0])\n",
     "    else: print(value[0], end =\" \")\n",
     "    if(magic == True): print(\"&\", end =\" \")\n",
-    "    if(magic == False): print('registros descartados:', len(data) - value[0])\n",
+    "    if(magic == False): print('registros válidos:', len(data) - value[0])\n",
     "    else: print(len(data) - value[0], end =\" \")\n",
     "    if(magic == True): print(\"\\\\\\ \\hline\")\n",
-    "    value[0] = len(data) - value[0]\n",
+    "    #value[0] = len(data) - value[0]\n",
     "    dicti[value[0]] = newEnt\n",
     "    s1.append(value[0])\n",
     "    s2.append(newEnt)\n",
@@ -985,6 +986,13 @@
     "print('Menor número de registros inválidos: ',best,end=\", \")\n",
     "print('combinación: ',bestList)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
